[package]
name = "flotte"
version = "0.1.0"
authors = ["Jonathan Grahl <nikentic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.2.0", features=["macros", "rt-multi-thread", "sync"]}
tonic = {version="0.4.0"}
prost = "0.7.0"
futures = "0.3"
anyhow = "1.0.38"

[build-dependencies]
tonic-build = {version="0.4.0"}
